Se genera el sass de la pagina shoppingcart y responsive

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -725,6 +725,251 @@
     }
 }
 
+/* */
+/* Style for shoppingcart */
+/* Sección que muestra lo que se guardo en el carrito de compras */
+#containershoppingcart{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    #containershopcart{
+        width: 96%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+        margin-top: 15px;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        display: grid;
+        grid-template-columns: 1.4fr 0.6fr;
+        grid-template-rows: repeat(2 auto);
+        #shopproducts{
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 1;
+            grid-row-end: 3;
+            gap: 10px;
+            .shopproduct{
+                border-radius: 5px;
+                width: 98%;
+                border: 1px solid rgba(0, 0, 0, 0.5);
+                margin: auto;
+                margin-top: 25px;
+                margin-bottom: 25px;
+                display: grid;
+                grid-template-columns: 1fr 2fr 1fr;
+                grid-template-rows: repeat(3 auto);
+                .imgshoppro{
+                    grid-column-start: 1;
+                    grid-column-end: 2;
+                    grid-row-start: 1;
+                    grid-row-end: 4;
+                    img{
+                        width: 100%;
+                    }
+                }
+                .brandshoppro{
+                    grid-column-start: 2;
+                    grid-column-end: 3;
+                    grid-row-start: 1;
+                    grid-row-end: 2;
+                    padding-top: 10px;
+                }
+                .nameshoppro{
+                    grid-column-start: 2;
+                    grid-column-end: 3;
+                    grid-row-start: 2;
+                    grid-row-end: 3;
+                    p{
+                        font-size: small;
+                    }
+                }
+                .boxnumdeleteshoppro{
+                    grid-column-start: 2;
+                    grid-column-end: 3;
+                    grid-row-start: 3;
+                    grid-row-end: 4;
+                    display: flex;
+                    padding-left: 15px;
+                    #contcontainer{
+                        padding-right: 15px;
+                        height: 100%;
+                        width: 30%;
+                        padding-top: 5px;
+                        text-align: center;
+                        #btndecrementar{
+                            background-color: #586468;
+                            color: white;
+                            padding: 3px;
+                            font-size: larger;
+                        }
+                        #contador{
+                            font-size: larger;
+                        }
+                        #btnincrementar{
+                            background-color: #00ff51;
+                            color: black;
+                            padding: 3px;
+                            font-size: larger;
+                        }
+                    }
+                    .btndeleteshop{
+                        width: 70%;
+                        height: 98%;
+                        button{
+                            background-color: #fa0000e0;
+                            color: #fff;
+                            padding: 15px 25px;
+                            border: none;
+                            border-radius: 4px;
+                            cursor: pointer;
+                            font-size: larger;
+                        }
+                    }
+                }
+                .valueshopcartpro{
+                    grid-column-start: 3;
+                    grid-column-end: 4;
+                    grid-row-start: 1;
+                    grid-row-end: 4;
+                    margin: auto;
+                    height: 90%;
+                    border-left: 3px dashed rgba(0, 0, 0, 0.5);
+                    .valueshoppro{
+                        display: flex;
+                        flex-direction: column;
+                        margin-bottom: 20px;
+                        margin-top: 20px;
+                        margin-left: 25px;
+                        span:nth-child(2){
+                            font-size: small;
+                        }
+                    }
+                    .prevalueshoppro{
+                        display: flex;
+                        flex-direction: column;
+                        margin-left: 25px;
+                        span:nth-child(2){
+                            font-size: small;
+                        }
+                    }
+                }
+            }
+        }
+        #summaryshop{
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            margin-top: 25px;
+            margin-bottom: 25px;
+            width: 98%;
+            border: 1px solid rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            .namesumm{
+                margin: auto;
+                text-align: center;
+                width: 95%;
+                padding: 15px;
+                border-bottom: 3px dashed rgba(0, 0, 0, 0.5);
+            }
+            .summary{
+                margin: auto;
+                width: 95%;
+                padding: 15px;
+                border-bottom: 3px dashed rgba(0, 0, 0, 0.5);
+                .details{
+                    display: flex;
+                    justify-content: space-between;
+                    font-weight: bold;
+                    margin-bottom: 25px;
+                }
+                .btnstartpayment{
+                    display: flex;
+                    justify-content: center;
+                    button{
+                        background-color: #470696;
+                        color: #fff;
+                        padding: 10px 15px;
+                        border: none;
+                        border-radius: 4px;
+                        cursor: pointer;
+                        width: 40%;
+                        &:hover{
+                            width: 50%;
+                            height: 3.5rem;
+                            font-size: large;
+                            background-color: darkgreen;
+                            transition: all 0.3s;
+                        }
+                    }
+                }
+            }
+            .paymentmethods{
+                margin: auto;
+                width: 95%;
+                padding: 15px;
+                p{
+                    padding-top: 10px;
+                    font-weight: bold;
+                }
+                .methodsshop{
+                    display: grid;
+                    grid-template-columns: repeat(2 auto);
+                    grid-template-rows: repeat(3 1fr);
+                    img{
+                        width: 150px;
+                        height: 50px;
+                        &:nth-child(1){
+                            grid-column-start: 1;
+                            grid-column-end: 2;
+                            grid-row-start: 1;
+                            grid-row-end: 2;
+                            margin: auto;
+                        }
+                        &:nth-child(2){
+                            grid-column-start: 2;
+                            grid-column-end: 3;
+                            grid-row-start: 1;
+                            grid-row-end: 2;
+                            margin: auto;
+                            width: 100px;
+                            height: 100px;
+                        }
+                        &:nth-child(3){
+                            grid-column-start: 1;
+                            grid-column-end: 2;
+                            grid-row-start: 2;
+                            grid-row-end: 3;
+                            margin: auto;
+                        }
+                        &:nth-child(4){
+                            grid-column-start: 2;
+                            grid-column-end: 3;
+                            grid-row-start: 2;
+                            grid-row-end: 3;
+                            margin: auto;
+                        }
+                        &:nth-child(5){
+                            grid-column-start: 1;
+                            grid-column-end: 2;
+                            grid-row-start: 3;
+                            grid-row-end: 4;
+                            margin: auto;
+                        }
+                        &:nth-child(6){
+                            grid-column-start: 2;
+                            grid-column-end: 3;
+                            grid-row-start: 3;
+                            grid-row-end: 4;
+                            margin: auto;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 /* Footer de todas las paginas */
 /* Estilo para el footer(incluye logo con contacto, servicios e información de la empresa) */
 #piepagina{
@@ -1146,6 +1391,71 @@
         }
     }
 
+    /* Responsive de shoppingcart */
+    #containershoppingcart{
+        #containershopcart{
+            width: 98%;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(2 auto);
+            #shopproducts{
+                margin: auto;
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 1;
+                grid-row-end: 2;
+                .shopproduct{
+                    .imgshoppro{
+                        margin: auto;
+                    }
+                    .boxnumdeleteshoppro{
+                        #contcontainer{
+                            width: 45%;
+                            text-align: start;
+                            padding: 0;
+                            #btndecrementar{
+                                font-size: medium;
+                            }
+                            #btnincrementar{
+                                font-size: medium;
+                            }
+                        }
+                        .btndeleteshop{
+                            width: 55%;
+                            height: 100%;
+                            button{
+                                margin-bottom: 5px;
+                                padding: 8px 10px;
+                                font-size: small;
+                            }
+                        }
+                    }
+                    .valueshopcartpro{
+                        margin-left: 3px;
+                        .valueshoppro{
+                            font-size: small;
+                            margin-bottom: 10px;
+                            margin-top: 10px;
+                            margin-left: 10px;
+                        }
+                        .prevalueshoppro{
+                            font-size: small;
+                            margin-left: 10px;
+                        }
+                    }
+                }
+            }
+            #summaryshop{
+                margin: auto;
+                margin-bottom: 5px;
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 2;
+                grid-row-end: 3;
+            }
+        }    
+    }
+
     /* Footer de todas las paginas */
     #piepagina{
         display: grid;
@@ -1249,6 +1559,22 @@
             width: 80%;
             height: 2.2rem;
             transition: 0.3s;
+        }
+    }
+
+    /* Responsive de shoppingcart */
+    #containershoppingcart{
+        #containershopcart{
+            #summaryshop{
+                .paymentmethods{
+                    .methodsshop{
+                        img{
+                            width: 75px;
+                            height: 40px;
+                        }
+                    }
+                }
+            }
         }
     }
 
