--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -392,6 +392,44 @@
         }    
     }
 
+    /* Responsive de product */
+    #productcontainer{
+        .proproduct{
+            width: 96%;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(3 auto);
+            .imagesproproduct{
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 1;
+                grid-row-end: 2;
+                margin-bottom: 25px;
+                .mainimgproproduct{
+                    width: 100%;
+                }
+                .secondaryimgproproduct{
+                    width: 100%;
+                    gap: 5px;
+                }
+            }
+            .detallesproproduct{
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 2;
+                grid-row-end: 3;
+                width: 100%;
+            }
+            .descriptionproproduct{
+                grid-column-start: 1;
+                grid-column-end: 2;
+                grid-row-start: 3;
+                grid-row-end: 4;
+            }
+        }
+    }
+
+
     /* Footer de todas las paginas */
     #piepagina{
         display: grid;
