Se arregla responsive de ofertasproduct en index

--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -250,6 +250,10 @@
             .product:nth-child(5), .product:nth-child(6){
                 display: none;
             }
+            .product:hover{
+                width: 25%;
+                transition: all 0.2s;
+            }
         }
     }
 
