--- a/scss/main.css
+++ b/scss/main.css
@@ -479,6 +479,39 @@
 
 /* */
 /* Style for categoriesproducts */
+#containercategoriesproducts {
+  width: 100%;
+  height: auto;
+}
+#containercategoriesproducts #containercatproducts {
+  width: 94%;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  gap: 10px;
+  display: grid;
+  grid-template-columns: 0.5fr 1.5fr;
+  grid-template-rows: auto;
+}
+#containercategoriesproducts #containercatproducts .acordeoncatproducts {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+#containercategoriesproducts #containercatproducts .contcatproducts {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+#containercategoriesproducts #containercatproducts .contcatproducts .filtrosecundario {
+  padding: 10px;
+}
+#containercategoriesproducts #containercatproducts .contcatproducts .catproducts .products {
+  padding: 0;
+}
+
 /* */
 /* Style for product */
 #productcontainer {
